--- a/AdminLTE/Areas/Identity/Pages/Account/Login.cshtml
+++ b/AdminLTE/Areas/Identity/Pages/Account/Login.cshtml
@@ -111,5 +111,13 @@
     @* @section Scripts { *@
         <partial name="_ValidationScriptsPartial" />
     @* } *@
+    <script>
+        if (window.history && window.history.pushState) {
+            window.history.pushState(null, "", window.location.href);
+            window.onpopstate = function () {
+                window.history.pushState(null, "", window.location.href);
+            };
+        }
+    </script>
 </body>
 </html>
