--- a/AdminLTE/Views/Home/Index.cshtml
+++ b/AdminLTE/Views/Home/Index.cshtml
@@ -1,9 +1,11 @@
-﻿
+﻿@using Microsoft.AspNetCore.Http
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>AdminLTE 3 | Dashboard</title>
 
     <!-- Google Font: Source Sans Pro -->
@@ -179,12 +181,27 @@
                         <i class="fas fa-th-large"></i>
                     </a>
                 </li>
-                <li class="nav-item">
-                    <form id="logoutForm" asp-area="Identity" asp-page="/Account/Logout" method="post" class="d-inline">
-                        <button type="submit" class="nav-link btn btn-link text-danger" style="text-decoration: none;">
-                            <i class="fas fa-sign-out-alt"></i> Logout
-                        </button>
-                    </form>
+               
+                <!--Logout or Cahnge Password-->
+                <!-- User Account Dropdown Menu -->
+                <li class="nav-item dropdown">
+                    <a class="nav-link" data-toggle="dropdown" href="#">
+                        <i class="fas fa-user"></i>
+                        <span class="ml-1"></span>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
+                        <span class="dropdown-header">Welcome, @HttpContextAccessor.HttpContext.Session.GetString("UserName")</span>
+                        <div class="dropdown-divider"></div>
+                        <a href="~/Identity/Account/Manage/ChangePassword" class="dropdown-item text-danger">
+                            <i class="fas fa-key mr-2"></i> Change Password
+                        </a>
+                        <div class="dropdown-divider"></div>
+                        <form asp-area="Identity" asp-page="/Account/Logout" method="post" id="logoutForm">
+                            <button type="submit" class="dropdown-item">
+                                <i class="fas fa-sign-out-alt mr-2"></i> Logout
+                            </button>
+                        </form>
+                    </div>
                 </li>
 
             </ul>
@@ -201,14 +218,19 @@
             <!-- Sidebar -->
             <div class="sidebar">
                 <!-- Sidebar user panel (optional) -->
-                <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+                @inject IHttpContextAccessor HttpContextAccessor
+                @{
+                    var username = HttpContextAccessor.HttpContext?.Session.GetString("UserName") ?? "Guest";
+                }
+                <div class="user-panel mt-3 pb-3 mb-3 d-flex align-items-center">
                     <div class="image">
-                        <img src="~/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+                        <img src="~/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image" style="width: 40px; height: 40px;">
                     </div>
-                    <div class="info">
-                        <a href="#" class="d-block">Alexander Pierce</a>
+                    <div class="info ps-2">
+                        <a href="#" class="d-block fw-bold text-white">Welcome, @username</a>
                     </div>
                 </div>
+
 
                 <!-- SidebarSearch Form -->
                 <div class="form-inline">
@@ -235,7 +257,7 @@
                                     <i class="right fas fa-angle-left"></i>
                                 </p>
                             </a>
-                            <ul class="nav nav-treeview">
+                            @* <ul class="nav nav-treeview">
                                 <li class="nav-item">
                                     <a href="./index.html" class="nav-link active">
                                         <i class="far fa-circle nav-icon"></i>
@@ -254,7 +276,7 @@
                                         <p>Dashboard v3</p>
                                     </a>
                                 </li>
-                            </ul>
+                            </ul> 
                         </li>
                         <li class="nav-item">
                             <a href="pages/widgets.html" class="nav-link">
@@ -324,7 +346,7 @@
                                     </a>
                                 </li>
                             </ul>
-                        </li>
+                        </li> 
                         <li class="nav-item">
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fas fa-chart-pie"></i>
@@ -360,7 +382,7 @@
                                 </li>
                             </ul>
                         </li>
-                        <li class="nav-item">
+                         <li class="nav-item">
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fas fa-tree"></i>
                                 <p>
@@ -418,7 +440,6 @@
                                     </a>
                                 </li>
                             </ul>
-                        </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fas fa-edit"></i>
@@ -858,7 +879,7 @@
                                 <p>Informational</p>
                             </a>
                         </li>
-                    </ul>
+                    </ul>*@
                 </nav>
                 <!-- /.sidebar-menu -->
             </div>
@@ -1477,7 +1498,13 @@
         <!-- /.control-sidebar -->
     </div>
     <!-- ./wrapper -->
-    <!-- jQuery -->
+    <script>
+        // window.history.pushState(null, "", window.location.href);
+        // window.onpopstate = function () {
+        //     window.location.replace("/Identity/Account/Login");
+        // };
+    </script>
+
     <!-- jQuery -->
     <script src="~/plugins/jquery/jquery.min.js"></script>
     <!-- jQuery UI 1.11.4 -->
@@ -1512,5 +1539,6 @@
     @* <script src="~/dist/js/demo.js"></script> *@
     <!-- AdminLTE dashboard demo -->
     <script src="~/dist/js/pages/dashboard.js"></script>
+
 </body>
 </html>
