--- a/AdminLTE/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/AdminLTE/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -1,36 +1,76 @@
 ﻿@page
 @model ChangePasswordModel
 @{
-    ViewData["Title"] = "Change password";
-    ViewData["ActivePage"] = ManageNavPages.ChangePassword;
+    ViewData["Title"] = "Change Password";
+    Layout = null; // Use AdminLTE layout if needed
 }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Change Password | AdminLTE</title>
+    <link rel="stylesheet" href="~/plugins/fontawesome-free/css/all.min.css" />
+    <link rel="stylesheet" href="~/plugins/icheck-bootstrap/icheck-bootstrap.min.css" />
+    <link rel="stylesheet" href="~/dist/css/adminlte.min.css" />
+</head>
+<body class="hold-transition login-page">
+    <div class="login-box">
+        <div class="card card-outline card-primary">
+            <div class="card-header text-center">
+                <a href="#" class="h1"><b>Admin</b>LTE</a>
+            </div>
+            <div class="card-body">
 
-<h3>@ViewData["Title"]</h3>
-<partial name="_StatusMessage" for="StatusMessage" />
-<div class="row">
-    <div class="col-md-6">
-        <form id="change-password-form" method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.OldPassword" class="form-control" autocomplete="current-password" aria-required="true" placeholder="Please enter your old password." />
-                <label asp-for="Input.OldPassword" class="form-label"></label>
-                <span asp-validation-for="Input.OldPassword" class="text-danger"></span>
+                <p class="login-box-msg">Change your password</p>
+
+                @if (!string.IsNullOrEmpty(Model.StatusMessage))
+                {
+                    <div class="alert alert-success text-center">@Model.StatusMessage</div>
+                }
+
+                <form method="post">
+                    <div asp-validation-summary="ModelOnly" class="text-danger text-center" role="alert"></div>
+
+                    <div class="input-group mb-3">
+                        <input asp-for="Input.OldPassword" class="form-control" placeholder="Current Password" autocomplete="current-password" />
+                        <div class="input-group-append">
+                            <div class="input-group-text"><span class="fas fa-lock"></span></div>
+                        </div>
+                    </div>
+                    <span asp-validation-for="Input.OldPassword" class="text-danger"></span>
+
+                    <div class="input-group mb-3">
+                        <input asp-for="Input.NewPassword" class="form-control" placeholder="New Password" autocomplete="new-password" />
+                        <div class="input-group-append">
+                            <div class="input-group-text"><span class="fas fa-lock"></span></div>
+                        </div>
+                    </div>
+                    <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
+
+                    <div class="input-group mb-3">
+                        <input asp-for="Input.ConfirmPassword" class="form-control" placeholder="Confirm New Password" autocomplete="new-password" />
+                        <div class="input-group-append">
+                            <div class="input-group-text"><span class="fas fa-lock"></span></div>
+                        </div>
+                    </div>
+                    <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+
+                    <div class="row">
+                        <div class="col-12">
+                            <button type="submit" class="btn btn-primary btn-block">Update Password</button><br/>
+                            <a href="~/Home/Index" class="btn btn-close-white mb-3"><i class="fas fa-arrow-left"></i> Back</a>
+
+                        </div>
+                    </div>
+                </form>
             </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.NewPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Please enter your new password." />
-                <label asp-for="Input.NewPassword" class="form-label"></label>
-                <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
-            </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Please confirm your new password."/>
-                <label asp-for="Input.ConfirmPassword" class="form-label"></label>
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Update password</button>
-        </form>
+        </div>
     </div>
-</div>
 
-@section Scripts {
+    <script src="~/plugins/jquery/jquery.min.js"></script>
+    <script src="~/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="~/dist/js/adminlte.min.js"></script>
     <partial name="_ValidationScriptsPartial" />
-}
+</body>
+</html>
