--- a/AdminLTE/Areas/Identity/Pages/Account/Login.cshtml
+++ b/AdminLTE/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,10 +1,9 @@
 ﻿@page
-@model LoginModel
-
+@model AdminLTE.Areas.Identity.Pages.Account.LoginModel
 @{
-    ViewData["Title"] = "Log in";
-    Layout = null; // Disable the shared layout so AdminLTE template is fully used
+    Layout = null;
 }
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
