--- a/AdminLTE/Areas/Identity/Pages/Account/EditProfile.cshtml
+++ b/AdminLTE/Areas/Identity/Pages/Account/EditProfile.cshtml
@@ -9,7 +9,6 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1 class="m-0">Edit Profile</h1>
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
@@ -76,7 +75,7 @@
                     </div>
 
                     <label class="form-label d-block">Hobby</label>
-                    @foreach (var hobby in new[] { "Reading", "Music", "Sports", "Travel", "Cooking" })
+                    @foreach (var hobby in new[] { "Gaming", "Dansing", "Coding", "Music", "Sports", "Travel", "Cooking", "Other"})
                     {
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="checkbox" name="Input.Hobby"
