--- a/AdminLTE/Views/ManageUser/Create.cshtml
+++ b/AdminLTE/Views/ManageUser/Create.cshtml
@@ -6,116 +6,105 @@
 
 <section class="content">
     <div class="container-fluid">
-        <div class="row mb-3">
-            <div class="col-md-6">
-                <h2 class="font-weight-bold text-primary">Create New User</h2>
-            </div>
-            <div class="col-md-6 text-right">
-                <a href="/ManageUser" class="btn btn-outline-primary">
-                    <i class="fas fa-arrow-left"></i> Back to Manage Users
-                </a>
-            </div>
-        </div>
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="card shadow border border-primary">
+                    <div class="card-header bg-primary text-white text-center">
+                        <h4 class="mb-0">Create New User</h4>
+                    </div>
+                    <div class="card-body">
+                        <form asp-action="Create" method="post" enctype="multipart/form-data">
 
-        <div class="card shadow">
-            <div class="card-header bg-dark text-white">
-                <h4 class="card-title">Add New User</h4>
-            </div>
-            <div class="card-body">
-                <form asp-action="Create" method="post" enctype="multipart/form-data">
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                            <div class="text-center mb-4">
+                                <img src="~/uploads/default.png"
+                                     class="rounded-circle shadow"
+                                     style="width: 120px; height: 120px; object-fit: cover;" />
+                                <div>
+                                    <label class="btn btn-sm btn-light mt-2">
+                                        <i class="fas fa-camera"></i> Choose File
+                                        <input type="file" name="ImageFile" hidden />
+                                    </label>
+                                </div>
+                            </div>
 
-                    <div class="row">
-                        <!-- Left Column -->
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label asp-for="Name" class="control-label"></label>
-                                <input asp-for="Name" class="form-control" />
-                                <span asp-validation-for="Name" class="text-danger"></span>
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label>Full Name</label>
+                                    <input asp-for="Name" class="form-control" />
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label>Phone Number</label>
+                                    <input asp-for="PhoneNumber" class="form-control" />
+                                </div>
+                            </div>
+
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label>Email</label>
+                                    <input asp-for="Email" class="form-control" />
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label>Username</label>
+                                    <input asp-for="UserName" class="form-control" />
+                                </div>
                             </div>
 
                             <div class="form-group">
-                                <label asp-for="Email" class="control-label"></label>
-                                <input asp-for="Email" class="form-control" />
-                                <span asp-validation-for="Email" class="text-danger"></span>
+                                <label>Password</label>
+                                <input name="Password" type="password" class="form-control" required />
                             </div>
 
                             <div class="form-group">
-                                <label asp-for="PhoneNumber" class="control-label"></label>
-                                <input asp-for="PhoneNumber" class="form-control" />
-                                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-                            </div>
-
-                            <div class="form-group">
-                                <label asp-for="UserName" class="control-label"></label>
-                                <input asp-for="UserName" class="form-control" />
-                                <span asp-validation-for="UserName" class="text-danger"></span>
-                            </div>
-
-                        </div>
-
-                        <!-- Right Column -->
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label asp-for="Address" class="control-label"></label>
+                                <label>Address</label>
                                 <textarea asp-for="Address" class="form-control"></textarea>
-                                <span asp-validation-for="Address" class="text-danger"></span>
+                            </div>
+
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label>Date of Birth</label>
+                                    <input asp-for="DOB" type="date" class="form-control" />
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label>Gender</label>
+                                    <div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" asp-for="Gender" value="Male" />
+                                            <label class="form-check-label">Male</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" asp-for="Gender" value="Female" />
+                                            <label class="form-check-label">Female</label>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
 
                             <div class="form-group">
-                                <label asp-for="DOB" class="control-label"></label>
-                                <input asp-for="DOB" class="form-control" type="date" />
-                                <span asp-validation-for="DOB" class="text-danger"></span>
+                                <label>Hobby</label>
+                                @{
+                                    var allHobbies = new[] { "Gaming","Dansing","Coding", "Music", "Sports", "Travel", "Cooking","Other" };
+                                }
+                                <div>
+                                    @foreach (var hobby in allHobbies)
+                                    {
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="checkbox" name="Input.Hobby" value="@hobby" />
+                                            <label class="form-check-label">@hobby</label>
+                                        </div>
+                                    }
+                                </div>
                             </div>
 
-                            <div class="form-group">
-                                <label asp-for="Gender" class="control-label"></label>
-                                <select asp-for="Gender" class="form-control">
-                                    <option value="">Select Gender</option>
-                                    <option value="Male">Male</option>
-                                    <option value="Female">Female</option>
-                                    <option value="Other">Other</option>
-                                </select>
-                                <span asp-validation-for="Gender" class="text-danger"></span>
+                            <div class="form-group text-center">
+                                <button type="submit" class="btn btn-primary">
+                                    <i class="fas fa-plus"></i> Create User
+                                </button>
+                                <a asp-action="Index" class="btn btn-secondary ml-2">Cancel</a>
                             </div>
-
-                            <div class="form-group">
-                                <label asp-for="Hobby" class="control-label"></label>
-                                <input asp-for="Hobby" class="form-control" />
-                                <span asp-validation-for="Hobby" class="text-danger"></span>
-                            </div>
-
-                            <div class="form-group">
-                                <label asp-for="Image" class="control-label">Profile Image (Optional)</label>
-                                <input asp-for="Image" type="file" class="form-control-file" accept="image/*" />
-                                <span asp-validation-for="Image" class="text-danger"></span>
-                            </div>
-                        </div>
+                        </form>
                     </div>
-
-                    <div class="form-group mt-4">
-                        <button type="submit" class="btn btn-primary">Create</button>
-                        <a asp-action="Index" class="btn btn-secondary ml-2">Cancel</a>
-                    </div>
-                </form>
+                </div>
             </div>
         </div>
     </div>
 </section>
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-    <script>
-        $(document).ready(function () {
-            $('#ConfirmPassword').on('keyup', function () {
-                var password = $('#Password').val();
-                var confirmPassword = $(this).val();
-                if (password !== confirmPassword) {
-                    $(this).next('.text-danger').text('Passwords do not match.');
-                } else {
-                    $(this).next('.text-danger').text('');
-                }
-            });
-        });
-    </script>
-}
