--- a/AdminLTE/Views/Shared/_SidebarMenu.cshtml
+++ b/AdminLTE/Views/Shared/_SidebarMenu.cshtml
@@ -132,12 +132,7 @@
         <li class="nav-item dropdown">
             <a class="nav-link d-flex align-items-center"
                data-toggle="dropdown" style="cursor: pointer;">
-                <img src="<%= image %>"
-                     alt="User Avatar"
-                     class="img-circle-profile mr-3"
-                     style="    width: 35px;
-                     height: 35px;" />
-
+                <img src="~/dist/img/user1-128x128.jpg" alt="User Avatar" class="img-size-50 mr-3 img-circle" />
             </a>
 
             @using Microsoft.AspNetCore.Identity
@@ -237,31 +232,36 @@
         </div>
 
         <!-- Sidebar Menu -->
+        @{
+            var currentPath = Context.Request.Path.ToString().ToLower();
+            var isDashboardActive = currentPath == "/" || currentPath.Contains("/home/index");
+            var isUserActive = currentPath.Contains("/manageuser");
+        }
+
         <nav class="mt-2">
             <ul class="nav nav-pills nav-sidebar flex-column"
                 data-widget="treeview" role="menu"
                 data-accordion="false">
-                <!-- Add icons to the links using the .nav-icon class
-                with font-awesome or any other icon font library -->
-                <li class="nav-item menu-open">
-                    <a href="~/Home/Index" class="nav-link active">
+
+                <!-- Dashboard -->
+                <li class="nav-item">
+                    <a href="~/Home/Index" class="nav-link @(isDashboardActive ? "active" : "")">
                         <i class="nav-icon fas fa-tachometer-alt"></i>
-                        <p>
-                            Dashboard
-                        </p>
+                        <p>Dashboard</p>
                     </a>
                 </li>
+
+                <!-- User -->
                 <li class="nav-item">
-                    <a href="~/ManageUser" class="nav-link">
-                        <i class="fas fa-users-cog"></i>
-                        <p>
-                             User
-                        </p>
+                    <a href="~/ManageUser" class="nav-link @(isUserActive ? "active" : "")">
+                        <i class="nav-icon fas fa-users-cog"></i>
+                        <p>User</p>
                     </a>
                 </li>
 
             </ul>
         </nav>
+
         <!-- /.sidebar-menu -->
     </div>
     <!-- /.sidebar -->
