--- a/AdminLTE/Views/Shared/_MyAdminLayout.cshtml
+++ b/AdminLTE/Views/Shared/_MyAdminLayout.cshtml
@@ -215,9 +215,13 @@
         </aside>
 
         <!-- Page Content -->
+        <!-- Content Wrapper. Contains page content -->
         <div class="content-wrapper">
+            @RenderSection("PageHeader", required: false)
             @RenderBody()
         </div>
+
+
 
         <!-- Footer -->
         <footer class="main-footer">
