--- a/AdminLTE/Views/Shared/_MyAdminLayout.cshtml
+++ b/AdminLTE/Views/Shared/_MyAdminLayout.cshtml
@@ -255,5 +255,6 @@
     <script src="~/dist/js/adminlte.js"></script>
     <script src="~/dist/js/pages/dashboard.js" defer></script>
     @RenderSection("Scripts", required: false)
+    <partial name="_ValidationScriptsPartial" />
 </body>
 </html>
