--- a/AdminLTE/Views/ManageUser/Create.cshtml
+++ b/AdminLTE/Views/ManageUser/Create.cshtml
@@ -31,9 +31,9 @@
                                 <strong>@ViewBag.RequiredError</strong>
                             </div>
                         }   
-                        <form asp-action="Create" method="post" enctype="multipart/form-data">
+                        <form asp-action="Create" method="post" novalidate enctype="multipart/form-data">
                             <!-- Show all validation messages at top -->
-                            <div asp-validation-summary="All" class="text-danger mb-3"></div>
+                            @* <div asp-validation-summary="All" class="text-danger mb-3"></div> *@
 
                             <div class="text-center mb-4">
                                 <img src="~/uploads/default.png"
